    . Add 2-arg test for ->synchronize()
    . Make ->set_visible actually use ->field()
      so it can also set select fields?!
    . Make ->set_visible also support select+option inputs

0.46 to be released
    . Add another, more local test for large pages
    . Add hint about bufsize to Troubleshooting.pod
    . Add test that bufsize actually takes effect

0.45 20110208
    . eval_in_page raises errors from perspective of the caller
      instead of raising errors in Firefox.pm
    . Added ->by_id() method and { id => $id } option for
      conveniently finding elements with names that ->selector
      interprets as CSS selectors.
    . Improved tests checking fields with fancy:names
      or fancy:ids

0.44 20100130
    . Allow ->click() on <input type="image"> inputs
      (provided by ysth, thanks)
    . Bump MozRepl::RemoteObject to 0.21 for better cleanup logic

0.43 20110109
    ! Fix MozRepl::RemoteObject prerequisite version number
    ! Change event filtering logic for load progress listener to
      just pre-filter, and keep the main logic in Perl. This
      should fix intermittent crashes.
    . Add 'no_cache' option to ->get()

0.42 20110106
    . Improved subroutine coverage to 95% on WWW::Mechanize::Firefox
    . Add test for ->forms in scalar context
    . Add test for ->forms in list context
    . Add test for ->reload()
    . Add test for ->back()
    . Add test for ->forward()
    . Add test for ->is_html()
    . ->back() / ->forward() now can optionally (not) synchronize
      for loading local files
    . Move page load progress listener into JS to reduce latency
    . Added ->on_event() accessor for convenient JS page load event debugging

0.41 20101211
    . Remove failing test that didn't respect localized theme names
    . Fix (i)frame tests that didn't produce results due to embedding sites 
      that didn't load.
    . Proxies in Firefox should impede test results less